# league-view

./: .gitignore  .npmrc  ADVANCED_ANALYTICS_SUMMARY.md  AGENTS.md  BADGE_IMPLEMENTATION_SUMMARY.md  CHAMPION_ASSETS_IMPLEMENTATION_SUMMARY.md  DATA_LOADING_AND_IMAGES_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FRONTEND_PERFORMANCE_OPTIMIZATION.md  README.md  RECONNECTION_IMPLEMENTATION_SUMMARY.md  RECONNECTION_TESTING_GUIDE.md  guide-v2.md  guide.md  package.json  pnpm-lock.yaml  rough-ex.html  start-dev.sh  test-appimage.sh  test_champion_images.html  tsconfig.json  vite.config.ts
public/assets/champions/: README.md
scripts/: download-champion-assets.sh  download_all_splash_arts.sh
src/: App.css  App.optimized.tsx  App.tsx  store.ts  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  retry.rs  riot_client.rs
src/components/analytics/: AdvancedAnalyticsDashboard.optimized.tsx  AdvancedAnalyticsDashboard.tsx  AnalyticsSummary.tsx  ChampionMatchupAnalysis.tsx  MetaAdaptation.tsx  PlayerComparison.tsx  PsychologyProfile.tsx  SkillProgression.tsx  SocialAnalytics.tsx  TimelineAnalytics.tsx
src/components/badges/: BadgeDisplay.tsx
src/components/champions/: ChampionDetailView.tsx  ChampionsList.tsx  ChampionsView.tsx
src/hooks/: useApiWithRetry.ts
src/services/: advancedAnalyticsService.ts  badgeService.ts  championAssetService.ts  championService.ts  configService.ts  externalAPIService.ts  liveMatchDetectionService.ts  riotAPIService.ts
src/types/: analytics.ts  badges.ts  champion.ts
(+17 files in other folders)
