[package]
name = "league-view"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
riven = "2.72.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
once_cell = "1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
lol-game-client-api = "0.1.8"
anyhow = "1.0.98"
log = "0.4"
tauri-plugin-log = "2.0"
chrono = { version = "0.4", features = ["serde"] }
[lib]
name = "league_view"
path = "src/lib.rs"
